--- a/app/public/css/perfilcliente.css
+++ b/app/public/css/perfilcliente.css
@@ -84,6 +84,7 @@ body {
 .img-tamanho, .maria {
     height: 40px;
     width: 40px;
+    border-radius: 50%
 }
 
 /*            cabeçalho Mobile          */
