--- a/app/views/pages/homevendedor.ejs
+++ b/app/views/pages/homevendedor.ejs
@@ -73,8 +73,8 @@
             <aside class="sidebar-menu">
               <ul>
                 <li>
-                  <a href="/perfilvendedor"><img src="imagens/icone informaçao.png" alt="Informação da conta"></a>
-                  Informação da conta
+                  <a href="/perfilvendedor"><img src="imagens/icone informaçao.png" alt="Perfil Vendedor"></a>
+                  Perfil Vendedor
                 </li>
                 <li>
                   <a href="/sacola1"><img src="imagens/icone sacola.png" alt="Sacola"></a>
