--- a/app/public/css/estilo.css
+++ b/app/public/css/estilo.css
@@ -150,9 +150,8 @@ img[alt*="Usuário" i] {
   background-color: rgb(255, 252, 252);
   position: fixed;
   left: -90%;
-  top: 0;
+  top: -20px;
   transition: left cubic-bezier(1, 0, 0, 1) .8s;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: start;
@@ -228,7 +227,7 @@ img[alt*="Usuário" i] {
 
 #menu-hamburguer:checked ~ label .hamburguer {
   transform: rotate(45deg);
-  background: transparent;
+  background: white;
 }
 
 #menu-hamburguer:checked ~ label .hamburguer:before {
@@ -270,6 +269,7 @@ img[alt*="Usuário" i] {
   margin-bottom: 1rem;
   font-size: 2.5rem;
   color: #000000;
+  font-family: 'Raleway', sans-serif;
 }
 
 .sidebar-menu li img {
@@ -305,6 +305,7 @@ img[alt*="Usuário" i] {
   font-weight: bold;
   color: #333;
   text-align: left;
+  font-family: 'Raleway', sans-serif;
 }
 
 .create-btn {
@@ -312,10 +313,11 @@ img[alt*="Usuário" i] {
   color: #fff;
   padding:1.5rem;
   border: none;
-  border-radius: 8px;
+  border-radius: 15px;
   font-size: 1.5rem;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  font-size: 30px;
 }
 
 .create-btn:hover {
